# AUDITOR

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  _typos.toml  build.rs  codecov.yaml  configuration.yaml  deny.toml  index.html  juice.css  robots.txt  search_index.en.js  sitemap.xml  sqlx-data.json
auditor/: .env  .gitignore  Cargo.toml  build.rs  sqlx-data.json
auditor-client/: .env  Cargo.toml
auditor-client/.sqlx/: query-256977e5f7886c61625e92a77efb52b9ca4321cefcac0e544d64334cdbca93ba.json  query-440620430cdcfb05e9ded5312614fae4df18e20a2a0730ec9e914ce34338df2d.json  query-7022afed3a87000ca2c5a5a829f8bdfddb266e0a577c428c830b02e3736d264e.json  query-7ab91dc1d18e4de022a7bbacc463476f8be8a8992b49fe363f70a2d58460e877.json  query-8de0a0fada9ffea04721b67f8df443a8c496bfccef4be482bbdaa36ef7d508a5.json  query-c8cba44011d83cdabb543adfae1637c5045144ecc61a6597f538d95a8cc756d4.json
auditor-client/benches/: README.md  benchmark_with_http_request.rs  configuration.rs
auditor-client/migrations/: 20231122115509_create_record_table.sql
auditor-client/src/: configuration.rs  constants.rs  database.rs  lib.rs
auditor/.sqlx/: query-0723e1854dee7d889745714fe094a64edfcf3f389eec3e77fefca2d753f1eceb.json  query-0de2b3aa2731428f5c749d7c166ab8be945eb01c6515fb3db329e45e39fd7d12.json  query-17f4686d8430a057a076f44db1d54859c3fb4f569d162d7095f8734b87ab73b7.json  query-262acf5fc2b4f747cd2e05ad2707e28f4d17fc26371012aeaece84cdf012c733.json  query-26a72be3c4ba0fddc30f53a71e0317e21982fde8bd24d8b5714439c1af835080.json  query-2fd7111ca6a9819d4bfffa0280413bf144dc11f6d890a9558dd07dc6c92b45de.json  query-36fad28130fa066e2182edb3019f5d7e77a635c6116aa9c8a5b358114fb8c57c.json  query-3da9ad5248c244c040b47e27cbbca081b156fd5b88bffac65be6bb7ba7aabafe.json  query-4e72ae54be447c525721306d208b926c647e3f8149bbd428a97ecbc9f8bceca5.json  query-4f6f0c4610070485bff505ce1207a4b77e206ab1558a7540e23a64165b95638e.json  query-50c6776ca37b9b56b92848573f32d72f44631c9ff702bb468dc7a7f5520a6f48.json  query-520d88dec0363b824ca4af064510c2e837819eb7877850ff8077643a5bdbe3e2.json  query-56c4218a1b59d8f9dc0af7191e516cb8f505a7d953ef5b2706e2427a136a918b.json  query-5b634a506d39595160459fb8a8ea3a9760372c1fc3dd14e8c086a2f91d7177d6.json  query-622a95c18c6d5bb7d69e5f557e4742a07db9389fb810005f9e8bc142686c7846.json  query-6447284378b0fd990f13ee4cdb6eeaecd4c55df263b7e892e22e073ac73a276c.json  query-6ba76bcc9e877d3b6e353a4b85a1115d4821d4304b91593614ea39597ae29bc1.json  query-6c7c9b840bd8bf36dd80484f6c82787423b2304ccff83a98a57ec398c1b46ddb.json  query-80a4ffc9c5af2cf8570c4543df24cc9fc9604f98bc4716ae4f99479af245774e.json  query-90e6c5e852ed16ef84a113c260d99efb6e193fa46b8115df94e750440e2d5517.json  query-9f11dbac5821c4debdfc4081fece6ef310623d73c16433c49a441c2d3eee0894.json  query-a5c2d5afb25cf16a58a73c11cdde1bf5d2336cf42c6e84bf24ba27313d827a1f.json  query-a621b3eb5f42f24a04d216b9ce3c490182712e1276512cdfe74dcbb9e3e9e54e.json  query-aa313afec8c23e75ee45750e2ce8e520b96a98670d3c46572a6f942f839b99c0.json  query-b205b9e460541ad09dcd6de4d75df490a88f4b31b3ef45a9ec68047c39081eb5.json  query-b4e6b925764d8bdabd3aa358f357fc59f0e71b39e06c82e332185cc9ab0b04ed.json  query-bac1cfa96d1801a491bc325101a0ea88c18a9e1ca50b2b623e07791a46d61b48.json  query-c7ec1adffa973855f43122df7ba8abe8e2826fb8ef5dfd2e900d1d2c09d6ead1.json  query-cb3125aad5e124a24a976c2cb20a6e8859709f978c9f651740c439abe3b41adb.json  query-d8c6add014ac34e66ffb0178d497b9e822c569f86a89525f6ed5cc306713995a.json  query-dc5295938290703233cfe51c2215e6a5f6a6afe26b6ba3635210f5c157032f78.json  query-df51c1b3b87d9315ba94de95a29870f5fc2f0df1cd42243b1727276af7a69503.json  query-e21896f3c7d1bbbef588d50794a4cd5ecd7f5f5bf51945bc2076ebd104ecbfbc.json  query-e4129d556ba749cb664ef6e876264efd36d82d813c2c9670dde24e4cfd042f94.json  query-e6c7e05a8f9aac8353000db25e8ac0bc54f7ff067ab70715b8659cb835f45af6.json  query-e88b5acb79055b5c307e15481bc270e47d65b525ef6d98376455a267972be532.json  query-f9013f697e7b81594947530172248a0400cfbf7e316d0224b4692475a12a7d7f.json  query-fd0276b7b26e8fee23c01c8552cd8f4391fb2f9de1cdd6e6501e8ee5647cacbf.json
auditor/benches/: benchmark_with_http_request.rs  configuration.rs
auditor/certs/: rootCA-key.pem  rootCA.pem  server-cert.pem  server-key.pem
auditor/configuration/: archive.yaml  base.yaml  dualstack.yaml  local.yaml  loglevel.yaml  production.yaml  rbac.yaml  tls_config.yaml
auditor/src/: archive.rs  configuration.rs  constants.rs  error.rs  lib.rs  macros.rs  main.rs  middleware.rs  startup.rs  telemetry.rs
collectors/htcondor/: README.md  __main__.py  cli.py  collector.py  config.py  exceptions.py  pyproject.toml  rpm_config.json  state_db.py  utils.py
collectors/kubernetes/: .env  Cargo.toml  testconfig.yml
collectors/slurm/: .env  Cargo.toml  sqlx-data.json
collectors/slurm-epilog/: Cargo.toml
plugins/apel/: .gitignore  LICENSE  README.md  auditor_apel_plugin.cfg  codecov.yml  pyproject.toml  rpm_config.json
plugins/priority/: Cargo.toml
plugins/utilization_tool/: README.md  auditor_summary_localhost_11_2024.csv  bootstrap-venv.sh  pyproject.toml  requirements.txt  rpm_config.json  util.spec
pyauditor/: .buildinfo  .gitignore  .readthedocs.yaml  Cargo.toml  README.md  api.html  changelog.html  examples.html  genindex.html  index.html  latest  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
pyauditor/_sources/: changelog.rst.txt  examples.rst.txt
pyauditor/docs/: conf.py  examples.rst  index.rst
pyauditor/edge/: .buildinfo  api.html  changelog.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pyauditor/scripts/: test_add_update.py  test_add_update_blocking.py  test_add_update_queued.py  test_advanced_query.py  test_advanced_query_blocking.py  test_advanced_query_queued.py  test_async.py  test_bulk_insert.py  test_bulk_insert_blocking.py  test_bulk_insert_queued.py  test_components.py  test_components_blocking.py  test_components_queued.py  test_eq.py  test_get_since.py  test_get_since_blocking.py  test_meta.py  (+7 more)
(+733 files in other folders)
