[workspace]
members = [
    "auditor",
    "auditor/scripts/parquet_to_auditor/rust_script",
    "auditor-client",
    "pyauditor",
    "collectors/kubernetes",
    "collectors/slurm",
    "collectors/slurm-epilog",
    "plugins/priority",
]

resolver = "3"

[workspace.dependencies]
actix-web = "4.8.0"
actix-tls = "3.4.0"
actix-web-opentelemetry = { version = "0.17.0", features = ["metrics", "metrics-prometheus"] }
anyhow = "1.0.100"
arrow= "57.0.0"
arrow-array= "57.0.0"
async-stream = "0.3"
auditor = { path = "./auditor", version = "0.10.1", default-features = false }
auditor-client = { path = "./auditor-client", version = "0.10.1" }
bincode = "1.3.3"
casbin = "2.15.0"
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
claim = { version = "0.7.1", package = "claims" }
color-eyre = "0.6.3"
config = "0.15.18"
criterion = {version = "0.7.0", features = ["html_reports", "async_tokio"]}
criterion-macro = "0.4.0"
csv = "1.4.0"
fake = { version = "4.4", features = ["chrono"] }
futures = "0.3"
futures-util = "0.3"
itertools = "0.14.0"
k8s-openapi = "0.21.1"
kube = "2.0.1"
num-traits = "0.2.19"
once_cell = "1.21.3"
opentelemetry = "0.23.0"
opentelemetry-prometheus = "0.16.0"
opentelemetry_sdk = "0.23.0"
parquet = "57"
prometheus = "0.13.4"
prometheus-http-query = { version = "0.8.0", default-features = false }
pyo3 = { version = "0.27.1", features = ["chrono", "extension-module", "anyhow"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["attributes", "tokio-runtime"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.9.2"
rand_distr = "0.5.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
reqwest-streams = { version = "0.12", features= ["json"] }
rustls = "0.23.24"
rustls-pemfile = "2.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde-aux = "4.6.0"
serde_json = "1.0.145"
serde_qs = { version = "0.15.0", features = ["actix4"] }
serde_with = { version = "3.15.1", features = ["chrono_0_4"] }
serde_yaml = "0.9.34"
shell-words = "1.1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "uuid", "chrono", "migrate", "runtime-tokio", "json"] }
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-cron-scheduler = "0.15.1"
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
unicode-segmentation = "1.11.0"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }
wiremock = "0.6.5"
x509-parser = "0.18.0"

[profile.release]
strip = true
