[package]
name = "auditor-client"
version = "0.5.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Client for AUDITOR"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]

[lib]
path = "src/lib.rs"

[dependencies]
auditor = { path = "../auditor", version = "0.5.0", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls", "blocking"] }
urlencoding = "2.1.3"
tracing = { version = "0.1", features = ["log"] }
thiserror = "1"
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_qs = { version = "0.13.0", features = ["actix4"] }
anyhow = "1.0.86"
bincode = "1.3.3"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
claim = { package = "claims", version = "0.7" }
wiremock = "0.6"
fake = { version = "2.9", features = ["chrono"] }
once_cell = "1"
uuid = { version = "1.8", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
itertools = "0.12.1"
