[package]
name = "auditor-client"
version = "0.6.2"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Client for AUDITOR"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
auditor.workspace = true
bincode.workspace = true
chrono.workspace = true
config.workspace = true
reqwest.workspace = true
serde.workspace = true
rand.workspace = true
rand_distr.workspace = true
serde-aux.workspace = true
serde_qs.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"]}
tracing.workspace = true
urlencoding.workspace = true

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
claim.workspace = true
fake.workspace = true
criterion-macro.workspace = true
criterion.workspace = true
itertools.workspace = true
once_cell.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
uuid.workspace = true
wiremock.workspace = true

[[bench]]
name = "benchmark_with_http_request"
harness = false
