[package]
name = "auditor"
version = "0.0.7"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
default-run = "auditor"
license = "MIT OR Apache-2.0"
description = "AccoUnting Data handlIng Toolbox for Opportunistic Resources"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]


[lib]
path = "src/lib.rs"

[[bin]]
name = "auditor"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
actix-web = "4.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_with = { version = "2", features = ["chrono_0_4"] }
config = "0.13"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
fake = { version = "2.5", features = ["chrono"] }
rand = "0.8"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
regex = "1"
num-traits = "^0.2"
opentelemetry-prometheus = "0.10"
opentelemetry = "0.17"
actix-web-opentelemetry = { version = "0.12", features = ["metrics"] }
thiserror = "1"
prometheus = "0.13"
itertools = "0.10.5"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
# claim = "0.5"
claim = { package = "claims", version = "0.7" }
quickcheck = "1"
quickcheck_macros = "1"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"

[features]
default = ["client", "server"]
client = []
server = []
