[package]
name = "auditor"
version = "0.10.1"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2024"
default-run = "auditor"
license = "MIT OR Apache-2.0"
description = "AccoUnting Data handlIng Toolbox for Opportunistic Resources"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]


[lib]
path = "src/lib.rs"

[[bin]]
name = "auditor"
path = "src/main.rs"

[dependencies]
actix-web-opentelemetry.workspace = true 
actix-web = { workspace = true, features = ["rustls-0_23"] }
actix-tls = { workspace = true, features = ["rustls-0_23"] }
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
async-stream.workspace = true
casbin.workspace = true
chrono.workspace = true
config.workspace = true
csv.workspace = true
fake.workspace = true
futures.workspace = true
futures-util.workspace = true
itertools.workspace = true
num-traits.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
parquet.workspace = true 
prometheus.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest-streams.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-aux.workspace = true
serde_qs.workspace = true
serde_with.workspace = true
sqlx = { workspace = true, features = ["postgres", "json"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-cron-scheduler.workspace = true
tracing-actix-web.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
tracing.workspace = true
unicode-segmentation.workspace = true
urlencoding.workspace = true
uuid.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
x509-parser.workspace = true

[dev-dependencies]
claim.workspace = true
once_cell.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
wiremock.workspace = true

[features]
default = ["server"]
server = []
