[package]
name = "python-auditor"
version = "0.5.0"
edition = "2021"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Python interface to AuditorClient"
documentation = "https://docs.rs/pyauditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    "target",
    ".env"
]

[lib]
name = "pyauditor"
crate-type = ["cdylib"]

[dependencies]
auditor = { path = "../auditor", version = "0.5.0", default-features = false, features = ["client"] }
anyhow = "1"
pyo3 = { version = "0.20", features = ["chrono", "extension-module", "anyhow"] }
pyo3-asyncio = { version = "0.20", features = ["attributes", "tokio-runtime"] }
tokio = "1"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.116"
serde = "1"
