[package]
name = "python-auditor"
version = "0.7.0"
edition = "2021"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Python interface to AuditorClient"
documentation = "https://docs.rs/pyauditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    "target",
    ".env"
]

[lib]
name = "pyauditor"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
auditor-client.workspace = true
auditor.workspace = true
chrono.workspace = true
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
