[build-system]
requires = ["setuptools==80.4.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {""= "src"}
packages = ["auditor_htcondor_collector"]

[project]
name = "auditor-htcondor-collector"
description = "AUDITOR collector for aggregating data from the HTCondor batch system"
version = "0.9.4"
requires-python = ">=3.9"
dependencies = [
    "pyyaml==6.0.2",
    "python-auditor==0.9.4"
]
readme = "README.md"

[project.optional-dependencies]
build = [
      "build==1.2.2.post1",
      "setuptools==80.4.0",
]

[project.scripts]
auditor-htcondor-collector = "auditor_htcondor_collector.main:main"

[project.urls]
documentation = "https://alu-schumacher.github.io/AUDITOR/#htcondor-collector"
