[build-system]
requires = ["setuptools==82.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {""= "src"}
packages = ["auditor_htcondor_collector"]

[project]
name = "auditor-htcondor-collector"
description = "AUDITOR collector for aggregating data from the HTCondor batch system"
version = "0.10.1"
requires-python = ">=3.9"
dependencies = [
    "pyyaml==6.0.3",
    "python-auditor==0.10.1"
]
readme = "README.md"

[project.optional-dependencies]
build = [
      "build==1.4.0",
      "setuptools==82.0.0",
]

[project.scripts]
auditor-htcondor-collector = "auditor_htcondor_collector.main:main"

[project.urls]
documentation = "https://alu-schumacher.github.io/AUDITOR/#htcondor-collector"
