[package]
name = "auditor-kubernetes-collector"
version = "0.6.3"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
auditor-client.workspace = true
auditor.workspace = true
bincode.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing-subscriber.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v7"] }

kube = { version = "0.88" }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
prometheus-http-query = { version = "0.8.0", default-features = false, features = ["rustls-tls"] }
serde_yaml = "0.9"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
fake = { workspace = true, features = ["chrono", "derive"] }
wiremock.workspace = true

