[package]
name = "auditor-kubernetes-collector"
version = "0.10.1"
authors = ["Raphael Kleinemühl <kleinemuehl@uni-wuppertal.de>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Kubernetes collector for AUDITOR"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]

[[bin]]
name = "auditor-kubernetes-collector"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
auditor.workspace = true
auditor-client.workspace = true
bincode.workspace = true
chrono.workspace = true
jiff.workspace = true
k8s-openapi = { workspace = true, features = ["v1_35"] }
kube.workspace = true
prometheus-http-query = { workspace = true, features = ["rustls-tls"] }
reqwest = { workspace = true, features = ["rustls-tls"] }
rustls.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true, features = ["time"] }
tracing-subscriber.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
fake = { workspace = true, features = ["chrono", "derive"] }
wiremock.workspace = true

