[package]
name = "auditor-slurm-epilog-collector"
version = "0.6.1"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Slurm epilog collector for AUDITOR"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]

[[bin]]
name = "auditor-slurm-epilog-collector"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow.workspace = true
auditor-client.workspace = true
auditor.workspace = true
chrono.workspace = true
config.workspace = true
regex.workspace = true
serde-aux.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
