[package]
name = "auditor-slurm-collector"
version = "0.3.1"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Slurm collector for AUDITOR"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]

[[bin]]
name = "auditor-slurm-collector"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow = "1"
auditor = { path = "../../auditor", version = "0.3.1", default-features = false, features = ["client"] }
bincode = "1.3.3"
color-eyre = "0.6.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.7", features = ["v4"] }
fake = { version = "2.9", features = ["chrono"] }
config = "0.13.4"
serde = { version = "1.0.196", features = ["derive"] }
serde-aux = "4.4.0"
itertools = "0.12.1"
regex = "1.10.3"
chrono = { version = "0.4.33", default-features = false }
once_cell = "1.19.0"
serde_with = { version = "3.6.0", features = ["chrono_0_4"] }
serde_json = "1.0.113"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
