[package]
name = "auditor-slurm-collector"
version = "0.6.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Slurm collector for AUDITOR"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]

[[bin]]
name = "auditor-slurm-collector"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow.workspace = true
auditor-client.workspace = true
auditor.workspace = true
bincode.workspace = true
chrono.workspace = true
color-eyre.workspace = true
config.workspace = true
fake.workspace = true
itertools.workspace = true
once_cell.workspace = true
regex.workspace = true
serde-aux.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "process"] }
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
