[package]
name = "auditor-slurm-collector"
version = "0.9.4"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Slurm collector for AUDITOR"
documentation = "https://docs.rs/auditor/"
homepage = "https://alu-schumacher.github.io/AUDITOR/"
repository = "https://github.com/alu-schumacher/AUDITOR"
readme = "../../README.md"
keywords = ["accounting", "opportunistic", "grid-computing", "batch-systems"]
exclude = [
    ".cargo",
    ".dockerignore",
    ".git",
    ".gitattributes",
    ".github",
    ".gitignore",
    ".pytest_cache",
    "target",
    "nohup.out"
]

[[bin]]
name = "auditor-slurm-collector"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow.workspace = true
auditor.workspace = true
auditor-client.workspace = true
bincode.workspace = true
chrono.workspace = true
color-eyre.workspace = true
config.workspace = true
fake.workspace = true
itertools.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde-aux.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sqlx = { workspace = true, features = ["postgres", "sqlite"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "process"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
